--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <item name="gradient_start" type="color">#ffffff</item>
+    <item name="gradient_center" type="color">#bfdeea</item>
+    <item name="gradient_end" type="color">#dcd7e9</item>
+
 </resources>
