--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,9 +7,9 @@
     tools:context="mydiary.bloomydev.ilasisi.mydiary.LoginActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_library_books_black_24dp"
         android:layout_marginTop="100dp"
         android:layout_centerHorizontal="true"/>
     <com.google.android.gms.common.SignInButton
